<resources>
    <string name="app_name">城市之声</string>
    <!--    常用-->
    <string name="tip_update_success">修改成功</string>
    <string name="cancel">取消</string>
    <string name="ok">确认</string>
    <!--    登陆界面-->
    <string name="tip_app_slogan">听见城市的声音</string>
    <string name="policy_privacy">隐私政策</string>
    <string name="tip_please_enter_id">请输入账号或手机号</string>
    <string name="tip_please_enter_pass">请输入密码</string>
    <string name="login">登陆</string>
    <string name="register_now">立即注册</string>
    <string name="forget_pass">忘记密码</string>
    <string name="agree">同意</string>
    <string name="tip_login_ing">正在登陆…</string>
    <string name="tip_please_check_privacy">请仔细阅读用户隐私协议</string>
    <string name="tip_account_cant_empty">账号为空</string>
    <!--注册界面-->
    <string name="register">注册</string>
    <string name="tip_please_enter_phone">请输入手机号</string>
    <string name="tip_phone_number">手&#160;&#160;机&#160;&#160;号：</string>
    <string name="tip_pass">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;码：</string>
    <string name="tip_pass_format">8–20位字母、数字、特殊字符</string>
    <string name="tip_verify_pass">确认密码：</string>
    <string name="tip_please_verify_pass">请确认您的密码</string>
    <string name="tip_go_login">去登陆</string>
    <string name="tip_has_account">已有账号?</string>
    <string name="tip_send_verify_code">发送验证码</string>
    <string name="tip_please_enter_verify_code">请输入验证码</string>
    <string name="tip_verify_code">验&#160;&#160;证&#160;&#160;码：</string>
    <string name="tip_phone_number_error">手机号格式错误</string>
    <string name="tip_pass_not_same">两次输入密码不同</string>
    <string name="tip_verify_code_empty">验证码为空</string>
    <string name="request_ing">正在请求…</string>
    <string name="tip_register_success">注册成功</string>
    <!--    web-->
    <string name="tip_copyed">已复制到剪贴板：</string>
    <string name="tip_please_choose_browser">请选择浏览器</string>
    <!--修改密码-->
    <string name="reset_pass">修改密码</string>
    <!--   主页面 -->
    <string name="bottom_me">我</string>
    <string name="bottom_home">倾听</string>
    <string name="bottom_publish">发布</string>
    <string name="not_permission">申请基本权限被拒绝，app运行可能发生错误</string>
    <string name="welcome">欢迎您！</string>
    <!--   碎片 我-->
    <string name="change_account">退出登录</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="user_info">个人信息</string>
    <string name="vip">VIP</string>
    <string name="ip">属地</string>
    <string name="id">ID&#160;</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="record">文章</string>
    <string name="favorite">收藏</string>
    <string name="default_num">0</string>
    <!--    个人信息-->
    <string name="head_image">头像</string>
    <string name="nick">名字</string>
    <string name="tip_please_enter_name">请输入名字</string>
    <string name="remark">简介</string>
    <string name="tip_please_enter_remark">请输入备注</string>
    <string name="tip_please_enter_email">请输入邮箱</string>
    <string name="email">邮箱</string>
    <string name="tip_please_enter_qq">请输入QQ号</string>
    <string name="qq">Q&#160;Q</string>
    <string name="tip_please_enter_wechat">请输入微信号</string>
    <string name="wechat">微信</string>
    <string name="gender">性别</string>
    <string name="birth">生日</string>
    <string name="update_info">修改资料</string>
    <string name="status">身份</string>
    <string name="phone">电话</string>
    <string name="tip_please_check_wechat">请检查微信号格式</string>
    <string name="tip_please_check_qq">请检查QQ号格式</string>
    <string name="tip_please_check_email">请检查邮箱格式</string>
    <string name="tip_drag_crop_head">拖拽裁剪头像</string>
    <string name="upload_head">修改头像</string>
    <string name="tip_err_resource_write">资源保存失败</string>
    <string name="tip_update_fail">修改失败</string>
    <string name="tip_scan_my_qr_code">扫一扫上面的二维码图案，和我成为朋友</string>
    <string name="qr_code_card">二维码名片</string>
    <string name="official_web">官方网站</string>
    <string name="copyright">copyright@2022</string>
    <!--消息页-->
    <string name="bottom_message">消息</string>
    <string name="comment">评论</string>
    <string name="new_fans">新增粉丝</string>

    <!--发布页-->
    <string name="super_record">父</string>
    <string name="title">标题</string>
    <string name="record_title_hint">一句话突出主要内容</string>
    <string name="description">摘要&#160;</string>
    <string name="record_description_hint">几句话描述关键问题</string>
    <string name="content">详情</string>
    <string name="record_content_hint">详细客观的描述事件内容。\n\t时间、地点、人物、过程、结果等</string>
    <string name="addition_url">附加链接</string>
    <string name="record_url_hint">补充链接</string>
    <string name="area">地区</string>
    <string name="record_area_hint">选择事件发生的地区</string>
    <string name="tip_upload_fail">上传失败！请重试</string>
    <string name="tip_upload_image_too_much">上传图片太多</string>
    <string name="tip_upload_ing">上传中…</string>
    <string name="tip_upload_success">上传成功</string>
    <string name="tip_publish_success">发布成功</string>
    <string name="tip_please_select_area">请选择地区</string>
    <string name="tip_please_enter_right_url">请输入正确的链接地址</string>
    <string name="is_top">置顶</string>
    <string name="tip_record_loss">返回将会丢失编辑内容，确认退出编辑吗？点击确认退出编辑</string>
    <string name="request_ing_cos_secret">正在请求临时密钥</string>
    <string name="delete">删除</string>
    <string name="preview">预览</string>
    <string name="no_more">没有更多了</string>
    <string name="record_url">附加链接</string>
    <string name="tip_enter_title_short">标题最短字符长度为：</string>
    <string name="tip_enter_description_short">摘要最短字符长度为：</string>
    <string name="tip_enter_content_short">内容最短字符长度为：</string>
    <string name="request_ing_please_wait">正在请求数据中，请稍后</string>
    <!--    首页-->
    <string name="send">发送</string>
    <string name="tip_please_enter_content">请输入内容…</string>
    <string name="tip_content_is_empty">输入内容为空</string>
    <string name="parent_record">首发</string>
    <string name="child_record">派生</string>
    <string name="related_record">相关卷宗</string>
    <string name="floor">号</string>
    <string name="tip_delete_success">已删除</string>
    <string name="tip_ensure_delete">确认删除吗?</string>
    <string name="filter">筛选</string>
    <string name="all_selected">全选</string>
    <string name="tip_attention_success">关注成功</string>
    <string name="camera_error">相机异常</string>
    <string name="tip_version_not_adapter">此功能未适配本机安卓版本</string>
    <string name="tip_scan">将二维码放入框内即可扫描</string>
    <string name="tip_scan_result">二维码扫描结果</string>
    <string name="favorite_private">私密</string>
    <string name="favorite_public">公开</string>
    <string name="add">新建</string>
    <string name="manage">管理</string>
    <string name="update">修改</string>
    <string name="tip_please_enter_favorite_name">请输入收藏夹名字</string>
    <string name="tip_please_enter_favorite_remark">请输入收藏夹简介</string>
    <string name="privilege">权限</string>
    <string name="new_favorite">新建收藏夹</string>
    <string name="tip_new_success">新建成功</string>
    <string name="edit_info">编辑资料</string>
    <string name="cancel_attention">取消关注</string>
    <string name="friend_remark">备注</string>
    <string name="already_delete">该内容已删除</string>
    <string name="tip_recognize_qr_code_fail">识别二维码失败</string>
    <string name="tip_all_read">全部已读</string>
    <string name="new_record_msg">评论、收藏、派生</string>
    <string name="default_ad"><![CDATA[http://gaozhi.online]]></string>
    <string name="tip_im_login_error">IM系统登陆失败</string>
    <string name="chat">发消息</string>
    <string name="send_fail">发送失败</string>
    <string name="tip_if_exit">再按一次退出软件</string>
    <string name="save_image">保存图片</string>
    <string name="image_save_success">图片保存成功</string>
    <string name="image_save_error">图片保存失败</string>
</resources>