<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PublishRecordActivity">
    <include
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_big_size" />
    <ScrollView
        android:background="@color/widget_color"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_margin"
            android:paddingVertical="@dimen/widget_margin">
            <TextView
                android:id="@+id/publish_record_activity_text_parent_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/super_record"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <TextView
                android:id="@+id/publish_record_activity_text_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:padding="@dimen/widget_margin"
                android:layout_marginVertical="@dimen/widget_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <EditText
                android:id="@+id/publish_record_activity_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/record_title_hint"
                android:padding="@dimen/widget_margin"
                android:maxLength="120"
                android:layout_marginVertical="@dimen/widget_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <EditText
                android:id="@+id/publish_record_activity_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/record_description_hint"
                android:gravity="top"
                android:minLines="3"
                android:maxLength="500"
                android:padding="@dimen/widget_margin"
                android:layout_marginVertical="@dimen/widget_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <EditText
                android:id="@+id/publish_record_activity_edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/record_content_hint"
                android:gravity="top"
                android:minLines="10"
                android:maxLines="20"
                android:maxLength="5000"
                android:padding="@dimen/widget_margin"
                android:layout_marginVertical="@dimen/widget_margin"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition_url"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <EditText
                android:id="@+id/publish_record_activity_edit_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/record_url_hint"
                android:padding="@dimen/widget_margin"
                android:layout_marginVertical="@dimen/widget_margin"
                 />
            <gaozhi.online.peoplety.ui.widget.NoAnimatorRecyclerView
                android:id="@+id/publish_record_activity_recycler_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/widget_margin"/>
            <ImageView
                android:id="@+id/publish_record_activity_image_select_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_general_height"
                android:src="@drawable/add_img"
                android:background="@drawable/rectangle_bg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                />
            <TextView
                android:id="@+id/publish_record_activity_text_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general"
                android:background="@drawable/rectangle_bg"
                android:hint="@string/record_area_hint"
                android:padding="@dimen/widget_margin"
                android:layout_marginVertical="@dimen/widget_margin"
                />
            <CheckBox
                android:id="@+id/publish_record_activity_check_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_general"
                android:textColor="@color/deep_text_color"
                android:text="@string/is_top"/>
            <Button
                android:id="@+id/publish_record_activity_btn_publish"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_big_height"
                android:layout_marginHorizontal="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/bottom_publish"
                android:textSize="@dimen/font_size_general" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>