<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        layout="@layout/layout_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="@dimen/widget_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:gravity="center"
            android:text="@string/tip_phone_number"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general"
            />
        <EditText
            android:id="@+id/reset_pass_activity_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:hint="@string/tip_please_enter_phone"
            android:textSize="@dimen/font_size_general"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:background="@color/bg_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="@dimen/widget_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:gravity="center"
            android:text="@string/tip_pass"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general"
            />
        <EditText
            android:id="@+id/reset_pass_activity_edit_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:inputType="textPassword"
            android:hint="@string/tip_pass_format"
            android:textSize="@dimen/font_size_general"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:background="@color/bg_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="@dimen/widget_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:gravity="center"
            android:text="@string/tip_verify_pass"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general"
            />
        <EditText
            android:id="@+id/reset_pass_activity_edit_verify_pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:inputType="textPassword"
            android:hint="@string/tip_please_verify_pass"
            android:textSize="@dimen/font_size_general"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:background="@color/bg_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginVertical="@dimen/widget_margin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:gravity="center"
            android:text="@string/tip_verify_code"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general"
            />
        <EditText
            android:id="@+id/reset_pass_activity_edit_verify_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/tip_please_enter_verify_code"
            android:textSize="@dimen/font_size_general"
            android:layout_marginRight="@dimen/activity_margin"
            android:background="@null"
            />
        <Button
            android:id="@+id/reset_pass_activity_btn_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tip_send_verify_code"
            android:textColor="@color/widget_color"
            android:textSize="@dimen/font_size_general"
            android:minHeight="0dp"
            android:padding="@dimen/widget_margin"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:background="@color/bg_color"/>
    <Button
        android:id="@+id/reset_pass_activity_btn_reset_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_big_height"
        android:text="@string/reset_pass"
        android:textSize="@dimen/font_size_general"
        android:layout_marginTop="@dimen/activity_margin"
        android:layout_marginHorizontal="@dimen/activity_margin"
        />
</LinearLayout>