<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".ui.activity.personal.FavoriteManageActivity">

    <include
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/widget_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/edit_widget_margin"
        android:paddingVertical="@dimen/edit_widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />

        <EditText
            android:id="@+id/favorite_manage_activity_edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tip_please_enter_favorite_name"
            android:inputType="text"
            android:paddingHorizontal="@dimen/widget_margin"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/widget_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/edit_widget_margin"
        android:paddingVertical="@dimen/edit_widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />

        <EditText
            android:id="@+id/favorite_manage_activity_edit_remark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/tip_please_enter_favorite_remark"
            android:inputType="text"
            android:paddingHorizontal="@dimen/widget_margin"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/widget_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/edit_widget_margin"
        android:paddingVertical="@dimen/edit_widget_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privilege"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />

        <TextView
            android:id="@+id/favorite_manage_activity_text_privilege"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="@dimen/widget_margin"
            android:text="@string/favorite_public"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_general" />
    </LinearLayout>

    <Button
        android:id="@+id/favorite_manage_activity_btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_big_height"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:layout_marginTop="@dimen/activity_margin"
        android:text="@string/new_favorite"
        android:textSize="@dimen/font_size_general" />
    <Button
        android:id="@+id/favorite_manage_activity_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_big_height"
        android:layout_marginHorizontal="@dimen/activity_margin"
        android:text="@string/delete"
        android:textSize="@dimen/font_size_general"
        android:textColor="@color/red"
        android:visibility="gone"/>
</LinearLayout>