<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/theme_bg">
    <LinearLayout
        android:id="@+id/login_activity_start_layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">
        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            android:layout_marginBottom="@dimen/header_height" />
        <ImageView
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:src="@drawable/app_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tip_app_slogan"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_slogan" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/login_activity_text_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_margin"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_activity_start_layout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/header_height"
            android:layout_marginBottom="@dimen/header_height" />

        <ImageView
            android:layout_width="@dimen/header_height"
            android:layout_height="@dimen/header_height"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/deep_text_color"
            android:textSize="@dimen/font_size_slogan"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin">
            <ImageView
                android:layout_width="@dimen/icon_size_general"
                android:layout_height="@dimen/icon_size_general"
                android:layout_gravity="start|center"
                android:src="@drawable/login_id" />

            <EditText
                android:id="@+id/login_activity_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:hint="@string/tip_please_enter_id"
                android:paddingHorizontal="@dimen/header_height"
                android:textSize="@dimen/font_size_general"
                android:autofillHints="phone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin">

            <ImageView
                android:layout_width="@dimen/icon_size_general"
                android:layout_height="@dimen/icon_size_general"
                android:layout_gravity="start|center"
                android:src="@drawable/login_pass" />

            <EditText
                android:id="@+id/login_activity_edit_pass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/header_height"
                android:hint="@string/tip_please_enter_pass"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/header_height"
                android:textSize="@dimen/font_size_general"
                android:autofillHints="password" />
        </FrameLayout>


        <Button
            android:id="@+id/login_activity_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_big_height"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/login"
            android:textSize="@dimen/font_size_general" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_activity_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/login_activity_text_find_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_pass"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/font_size_general" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/login_activity_check_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/agree"
                android:textSize="@dimen/font_size_general" />

            <TextView
                android:id="@+id/login_activity_text_privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/policy_privacy"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/font_size_general" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</FrameLayout>
